--- a/src/Wrapper.css
+++ b/src/Wrapper.css
@@ -2,7 +2,7 @@
   padding-top: 50px;
   margin: 0px auto 0px auto;
   background-color: #f9f9f9; }
-  .wrapper .works {
+  .wrapper .development {
     text-decoration: none;
     text-align: center;
     letter-spacing: 2px;
