--- a/src/Wrapper.scss
+++ b/src/Wrapper.scss
@@ -32,7 +32,7 @@
   @include margin($top:0px,$right:auto,$bottom:0px,$left:auto);
   @include backgroundColor();
 
-  .works{
+  .development{
     text-decoration: none;
     text-align: center;
     letter-spacing: 2px;
